source/generated/parser.js
// @generated — Do not edit directly.
// Generated by scripts/build-grammar.ts
//
// This file contains the compiled Peggy parser for CloudWatch Metrics Insights queries.
// The source grammar is at source/grammar/metrics-insights.pegjs

// eslint-disable
// @ts-nocheck
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Query: peg$parseQuery, SelectClause: peg$parseSelectClause, FromClause: peg$parseFromClause, WhereClause: peg$parseWhereClause, GroupByClause: peg$parseGroupByClause, OrderByClause: peg$parseOrderByClause, LimitClause: peg$parseLimitClause };
  var peg$startRuleFunction = peg$parseQuery;

  var peg$c0 = "--";
  var peg$c1 = "/*";
  var peg$c2 = "*/";
  var peg$c3 = "avg";
  var peg$c4 = "count";
  var peg$c5 = "max";
  var peg$c6 = "min";
  var peg$c7 = "sum";
  var peg$c8 = "\"";
  var peg$c9 = "\\\"";
  var peg$c10 = "tag.";
  var peg$c11 = "aws.accountid";
  var peg$c12 = "'";
  var peg$c13 = "\\'";
  var peg$c14 = "\\\\";
  var peg$c15 = "!=";
  var peg$c16 = "<=";
  var peg$c17 = ">=";
  var peg$c18 = "=";
  var peg$c19 = "<";
  var peg$c20 = ">";
  var peg$c21 = "select";
  var peg$c22 = "(";
  var peg$c23 = ")";
  var peg$c24 = "from";
  var peg$c25 = "schema";
  var peg$c26 = ",";
  var peg$c27 = "where";
  var peg$c28 = "and";
  var peg$c29 = "or";
  var peg$c30 = "current_account_id";
  var peg$c31 = "group";
  var peg$c32 = "by";
  var peg$c33 = "order";
  var peg$c34 = "desc";
  var peg$c35 = "asc";
  var peg$c36 = "limit";

  var peg$r0 = /^[ \t\n\r]/;
  var peg$r1 = /^[^\n\r]/;
  var peg$r2 = /^[^"]/;
  var peg$r3 = /^[a-zA-Z_]/;
  var peg$r4 = /^[a-zA-Z0-9_]/;
  var peg$r5 = /^[^']/;
  var peg$r6 = /^[0-9]/;

  var peg$e0 = peg$otherExpectation("whitespace");
  var peg$e1 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e2 = peg$literalExpectation("--", false);
  var peg$e3 = peg$classExpectation(["\n", "\r"], true, false);
  var peg$e4 = peg$literalExpectation("/*", false);
  var peg$e5 = peg$literalExpectation("*/", false);
  var peg$e6 = peg$anyExpectation();
  var peg$e7 = peg$literalExpectation("AVG", true);
  var peg$e8 = peg$literalExpectation("COUNT", true);
  var peg$e9 = peg$literalExpectation("MAX", true);
  var peg$e10 = peg$literalExpectation("MIN", true);
  var peg$e11 = peg$literalExpectation("SUM", true);
  var peg$e12 = peg$literalExpectation("\"", false);
  var peg$e13 = peg$literalExpectation("\\\"", false);
  var peg$e14 = peg$classExpectation(["\""], true, false);
  var peg$e15 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e16 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e17 = peg$literalExpectation("tag.", true);
  var peg$e18 = peg$literalExpectation("AWS.AccountId", true);
  var peg$e19 = peg$literalExpectation("'", false);
  var peg$e20 = peg$literalExpectation("\\'", false);
  var peg$e21 = peg$literalExpectation("\\\\", false);
  var peg$e22 = peg$classExpectation(["'"], true, false);
  var peg$e23 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e24 = peg$literalExpectation("!=", false);
  var peg$e25 = peg$literalExpectation("<=", false);
  var peg$e26 = peg$literalExpectation(">=", false);
  var peg$e27 = peg$literalExpectation("=", false);
  var peg$e28 = peg$literalExpectation("<", false);
  var peg$e29 = peg$literalExpectation(">", false);
  var peg$e30 = peg$literalExpectation("SELECT", true);
  var peg$e31 = peg$literalExpectation("(", false);
  var peg$e32 = peg$literalExpectation(")", false);
  var peg$e33 = peg$literalExpectation("FROM", true);
  var peg$e34 = peg$literalExpectation("SCHEMA", true);
  var peg$e35 = peg$literalExpectation(",", false);
  var peg$e36 = peg$literalExpectation("WHERE", true);
  var peg$e37 = peg$literalExpectation("AND", true);
  var peg$e38 = peg$literalExpectation("OR", true);
  var peg$e39 = peg$literalExpectation("CURRENT_ACCOUNT_ID", true);
  var peg$e40 = peg$literalExpectation("GROUP", true);
  var peg$e41 = peg$literalExpectation("BY", true);
  var peg$e42 = peg$literalExpectation("ORDER", true);
  var peg$e43 = peg$literalExpectation("DESC", true);
  var peg$e44 = peg$literalExpectation("ASC", true);
  var peg$e45 = peg$literalExpectation("LIMIT", true);

  var peg$f0 = function() { collectedComments.push({ type: 'LineComment', text: text(), location: location() }); };
  var peg$f1 = function() { collectedComments.push({ type: 'BlockComment', text: text(), location: location() }); };
  var peg$f2 = function(name) {
      return text().toUpperCase();
    };
  var peg$f3 = function(chars) {
      return chars.join('');
    };
  var peg$f4 = function() { return '"'; };
  var peg$f5 = function() {
      return text();
    };
  var peg$f6 = function(key) {
      return { isTag: true, name: 'tag.' + key };
    };
  var peg$f7 = function() { return { isTag: false, name: 'AWS.AccountId' }; };
  var peg$f8 = function(id) { return { isTag: false, name: id }; };
  var peg$f9 = function(chars) {
      return chars.join('');
    };
  var peg$f10 = function() { return "'"; };
  var peg$f11 = function() { return "\\"; };
  var peg$f12 = function(digits) {
      return parseInt(digits.join(''), 10);
    };
  var peg$f13 = function() { return '!='; };
  var peg$f14 = function() { return '<='; };
  var peg$f15 = function() { return '>='; };
  var peg$f16 = function() { return '='; };
  var peg$f17 = function() { return '<'; };
  var peg$f18 = function() { return '>'; };
  var peg$f19 = function(ns) { return ns.join(''); };
  var peg$f20 = function(ns) { return ns; };
  var peg$f21 = function() { return '"'; };
  var peg$f22 = function(dim) { return dim.join(''); };
  var peg$f23 = function(dim) { return dim; };
  var peg$f24 = function(func, metric) {
      return {
        type: 'SelectClause',
        function: func,
        metricName: metric,
        location: location()
      };
    };
  var peg$f25 = function(source) {
      return source;
    };
  var peg$f26 = function(ns) {
      return {
        type: 'NamespaceFrom',
        namespace: ns,
        location: location()
      };
    };
  var peg$f27 = function(ns, dim) { return dim; };
  var peg$f28 = function(ns, dims) {
      return {
        type: 'SchemaFrom',
        namespace: ns,
        dimensions: dims,
        location: location()
      };
    };
  var peg$f29 = function(first, op, cond) { return { op, cond }; };
  var peg$f30 = function(first, rest) {
      const conditions = [first];
      first.logicalOperator = null;
      for (const item of rest) {
        item.cond.logicalOperator = item.op;
        conditions.push(item.cond);
      }
      return {
        type: 'WhereClause',
        conditions: conditions,
        location: location()
      };
    };
  var peg$f31 = function() { return 'AND'; };
  var peg$f32 = function() { return 'OR'; };
  var peg$f33 = function(label, op, val) {
      return {
        type: 'WhereCondition',
        labelKey: label.name,
        operator: op,
        labelValue: val,
        isTag: label.isTag,
        location: location()
      };
    };
  var peg$f34 = function() { return 'CURRENT_ACCOUNT_ID()'; };
  var peg$f35 = function(first, rest) {
      const items = [first, ...rest];
      return {
        type: 'GroupByClause',
        items: items.map((k) => ({
          type: 'GroupByItem',
          labelKey: k.name,
          isTag: k.isTag,
          location: location()
        })),
        location: location()
      };
    };
  var peg$f36 = function(key) { return key; };
  var peg$f37 = function(func) { return 'ASC'; };
  var peg$f38 = function(func, direction) {
      return {
        type: 'OrderByClause',
        function: func,
        direction: direction || 'ASC',
        location: location()
      };
    };
  var peg$f39 = function() { return 'DESC'; };
  var peg$f40 = function() { return 'ASC'; };
  var peg$f41 = function(value) {
      return {
        type: 'LimitClause',
        value: value,
        location: location()
      };
    };
  var peg$f42 = function(select, from, where, groupBy, orderBy, limit) {
      const result = {
        type: 'MetricsInsightsQuery',
        select: select,
        from: from,
        location: location()
      };

      if (where) result.where = where;
      if (groupBy) result.groupBy = groupBy;
      if (orderBy) result.orderBy = orderBy;
      if (limit) result.limit = limit;

      // Attach any comments collected during lexing
      if (collectedComments.length > 0) {
        result.leadingComments = collectedComments;
        collectedComments = [];
      }

      return result;
    };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseWhiteSpace() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = input.charAt(peg$currPos);
    if (peg$r0.test(s1)) {
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = input.charAt(peg$currPos);
        if (peg$r0.test(s1)) {
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e1); }
        }
      }
    } else {
      s0 = peg$FAILED;
    }
    peg$silentFails--;
    if (s0 === peg$FAILED) {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }

    return s0;
  }

  function peg$parseLineComment() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r1.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = input.charAt(peg$currPos);
        if (peg$r1.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e3); }
        }
      }
      peg$savedPos = s0;
      s0 = peg$f0();
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBlockComment() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$currPos;
      s4 = peg$currPos;
      peg$silentFails++;
      if (input.substr(peg$currPos, 2) === peg$c2) {
        s5 = peg$c2;
        peg$currPos += 2;
      } else {
        s5 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      peg$silentFails--;
      if (s5 === peg$FAILED) {
        s4 = undefined;
      } else {
        peg$currPos = s4;
        s4 = peg$FAILED;
      }
      if (s4 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s5 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e6); }
        }
        if (s5 !== peg$FAILED) {
          s4 = [s4, s5];
          s3 = s4;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$currPos;
        s4 = peg$currPos;
        peg$silentFails++;
        if (input.substr(peg$currPos, 2) === peg$c2) {
          s5 = peg$c2;
          peg$currPos += 2;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        peg$silentFails--;
        if (s5 === peg$FAILED) {
          s4 = undefined;
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s5 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e6); }
          }
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      }
      if (input.substr(peg$currPos, 2) === peg$c2) {
        s3 = peg$c2;
        peg$currPos += 2;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e5); }
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f1();
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComment() {
    var s0;

    s0 = peg$parseLineComment();
    if (s0 === peg$FAILED) {
      s0 = peg$parseBlockComment();
    }

    return s0;
  }

  function peg$parse_() {
    var s0, s1;

    peg$silentFails++;
    s0 = [];
    s1 = peg$parseWhiteSpace();
    if (s1 === peg$FAILED) {
      s1 = peg$parseComment();
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$parseWhiteSpace();
      if (s1 === peg$FAILED) {
        s1 = peg$parseComment();
      }
    }
    peg$silentFails--;
    s1 = peg$FAILED;
    if (peg$silentFails === 0) { peg$fail(peg$e0); }

    return s0;
  }

  function peg$parseFunction() {
    var s0, s1;
